--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,59 @@
-
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
-// Variables
 @import "variables";
+@import "fonts";
 
-// Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+html, body { height: 100% }
+body { padding-bottom: 100px; font-family: "Noway"; }
+
+.flex { display: flex; }
+
+.flex-center {
+    align-items: center;
+    justify-content: center;
+}
+
+.flex-columns {
+    flex-direction: column;
+}
+
+.play-green {
+    background-color: $play-green;
+}
+
+.play-gray {
+    background-color: $play-gray;
+}
+
+.alert-red {
+    background-color: $alert-red;
+}
+
+.btn {
+    background-color: $play-gray;
+    height: 30px;
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 0px 10px;
+    margin: 10px 0;
+}
+
+.btn:hover {
+    color: darken(white, 10%);
+    cursor: pointer;
+
+    &.play-gray {
+        background-color: lighten($play-gray, 10%);
+    }
+
+    &.play-green {
+        background-color: lighten($play-green, 10%);
+    }
+
+    &.alert-red {
+        background-color: lighten($alert-red, 10%);
+    }
+}
+
+#app div {
+    border-radius: 3px;
+}
