--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -34,7 +34,6 @@ body { padding-bottom: 100px; font-family: "Noway"; }
     display: flex;
     align-items: center;
     padding: 0px 10px;
-    margin: 10px 0;
 }
 
 .btn:hover {
@@ -52,6 +51,10 @@ body { padding-bottom: 100px; font-family: "Noway"; }
     &.alert-red {
         background-color: lighten($alert-red, 10%);
     }
+}
+
+.mb {
+    margin-bottom: 10px;
 }
 
 #app div {
