--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -62,6 +62,10 @@ body { padding-bottom: 100px; font-family: "Noway"; }
     text-align: center;
 }
 
+.gray-bg {
+    background-color: rgba(236, 236, 236, 0.938);
+}
+
 .mb {
     margin-bottom: 10px;
 }
